Corrects Edit button on options menu routing. Also fixes overflow error in import reports dialog.

--- a/src/app/threat-report-overview/editor/report-importer/report-importer.component.scss
+++ b/src/app/threat-report-overview/editor/report-importer/report-importer.component.scss
@@ -67,4 +67,5 @@
 
 #current-reports-table {
     height: 35vh;
+    overflow-y: auto;
 }
